fixed widgets overflow styles

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ body {
     border-radius: 15px;
     gap: 5px;
     padding: 3px 15px 3px 7px;
+    overflow: hidden;
 }
 
 .searchContainer.dark {
@@ -180,6 +181,7 @@ body {
     background-color: rgb(255, 255, 255, 0.15);
     border-radius: 15px;
     padding: 23px;
+    overflow: hidden;
 }
 
 .widget__weatherNow.dark {
@@ -297,6 +299,7 @@ body {
     background-color: rgb(255, 255, 255, 0.15);
     padding: 23px;
     gap: 10%;
+    overflow: hidden;
 }
 
 .widget__forecast.dark {
@@ -322,6 +325,7 @@ body {
     transition: 0.3s;
     opacity: 0;
     border-bottom: 1px solid rgb(255, 255, 255, 0.4);
+    overflow: hidden;
     /* border-radius: 15px;
     background: rgb(255, 255, 255, 0.15); */
 }
@@ -384,6 +388,7 @@ body {
     background-color: rgb(255, 255, 255, 0.15);
     padding: 23px;
     gap: 10%;
+    overflow: hidden;
 }
 
 .widget__highlights.dark {
@@ -414,6 +419,7 @@ body {
     border-radius: 15px;
     background-color: rgb(255, 255, 255, 0.12);
     gap: 15%;
+    overflow: hidden;
 }
 
 .highlights__boxes-double__box.dark {
@@ -435,6 +441,7 @@ body {
     height: 100%;
     justify-content: space-between;
     gap: 5px;
+    overflow: hidden;
     /* padding: 0px 3px; */
 }
 
@@ -476,6 +483,7 @@ body {
     height: 100%;
     gap: 5px;
     padding: 0px 30px;
+    overflow: hidden;
 }
 
 .ss-boxes__card {
@@ -626,6 +634,7 @@ body {
     border-radius: 15px;
     background-color: rgb(255, 255, 255, 0.12);
     padding: 7px;
+    overflow: hidden;
 }
 
 .card__box-bottom.dark {
@@ -653,6 +662,7 @@ body {
     height: 20%;
     border-radius: 15px;
     background-color: rgb(255, 255, 255, 0.12);
+    overflow: hidden;
 }
 
 .card__box-text.dark {
